<resources>
    <string name="app_name">智勤</string>
    <!--public-->
    <string name="txt_init_data">正在初始化数据&#8230;</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_delete">确定要删除NFC设备: %s吗？</string>
    <!--SplashFragment-->
    <string name="btn_register">注册</string>
    <string name="btn_retry">重试</string>
    <string name="toast_retry">初始化数据失败，请点击重试按钮</string>
    <string name="prompt_no_network">当前无网络连接，请稍后再试</string>
    <string name="prompt_not_granted">应用权限申请失败！请手动开起应用的电话、文件读写、相机访问权限</string>
    <!--LoginFragment-->
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="txt_fingerprint_login">指纹登录</string>
    <string name="toast_username_can_not_be_empty">用户名不能为空</string>
    <string name="toast_password_can_not_be_empty">密码不能为空</string>
    <string name="txt_logging_in">正在登录，请稍后&#8230;</string>
    <string name="txt_login_fail">登录失败</string>
    <string name="toast_fail_to_connect_server">无法连接到服务器，请稍后重试</string>
    <!--FaceRegisterActivity-->
    <string name="title_register">设备注册</string>
    <string name="lbl_org_type">机构类型</string>
    <string name="hint_org_type">请选择机构类型</string>
    <string name="lbl_org">组织机构</string>
    <string name="hint_org">请选择组织机构</string>
    <string name="lbl_device_no">设备编码</string>
    <string name="lbl_sim_no">数据卡号</string>
    <string name="title_select_org_type">选择机构类型</string>
    <string name="txt_loading">正在提交数据，请稍后&#8230;</string>
    <string name="txt_commit_fail">数据提交失败，请稍后再试&#8230;</string>
    <string name="toast_not_selected_org_type">还未选择机构类型，请选择后再试</string>
    <string name="toast_not_selected_org">还未选择组织机构，请选择后再试！</string>
    <string name="toast_no_device_number_read">未读取到设备编码，请确认读取设备状态权限已开起！</string>
    <string name="toast_no_data_card_number_read">未读取到数据卡号，请确认读取设备状态权限已开起！</string>
    <!--OrgSelectActivity-->
    <string name="title_select_org">选择组织机构</string>
    <string name="btn_confirm">确定</string>
    <string name="hint_search">请输入机构名称/简拼/全拼</string>
    <string name="toast_can_not_input_special_char">不能输入特殊字符</string>
    <!--MyWorkFragment-->
    <string name="txt_todo_time_left">剩余时间</string>
    <string name="hint_task_search">输入搜索内容</string>
    <string name="txt_task_complete">按时</string>
    <string name="txt_task_overdue">逾期</string>
    <string name="txt_task_makeup">补登</string>
    <string name="txt_loading_task">正在加载任务，请稍后&#8230;</string>
    <!--TaskDetailsFragment-->
    <string name="title_task_datails">任务执行</string>
    <!--HaveDoneTaskDetailsFragment-->
    <string name="title_have_done_task_datails">检查结果清单</string>
    <!--PersonCenterFragment-->
    <string name="dialog_exit_login">您确定要退出登录？</string>
    <string name="progress_check_update_ing">正在检查更新&#8230;</string>
    <!--ModifyPwdFragment-->
    <string name="hint_input_old_pwd">请输入旧密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_confirm_input_new_pwd">请再次输入新密码</string>
    <string name="txt_old_pwd">旧密码</string>
    <string name="txt_new_pwd">新密码</string>
    <string name="txt_confirm_new_pwd">确认密码</string>
    <string name="title_modify_pwd">更改密码</string>
    <string name="toast_old_pwd_is_null">旧密码不能为空</string>
    <string name="toast_new_pwd_is_null">新密码不能为空</string>
    <string name="toast_confirm_new_pwd_is_null">确认新密码不能为空</string>
    <string name="toast_old_new_pwd_not_same">确认新密码不一致</string>
    <string name="progress_modify_pwd_ing">正在修改密码&#8230;</string>
    <string name="toast_modify_fail">修改密码失败</string>
    <string name="toast_modify_success">修改密码成功</string>
    <string name="xxxxxxxxxxxxxxxxx_branch">xxxxxxxxxxxxxxxxx支行</string>
    <string name="Mr_wangxx">王某某</string>
    <string name="Security_specialist">保安专干</string>
    <string name="data_clc_cache">清空数据缓存</string>
    <string name="modify_secret">修改密码</string>
    <string name="total_check_webpot">对网点进行全面安全检查</string>
    <string name="surplus_10_hours">剩余10小时</string>
    <string name="total">全部</string>
    <string name="up_to_standrad">达标</string>
    <string name="non_up_to_standrad">未达标</string>
    <string name="field">区域</string>
    <string name="assigment_name">任务名称：</string>
    <string name="workspace">应用中心</string>
    <string name="mutiple_dept">综合部</string>
    <!-- -->
    <string name="txt_commit_success">提交成功！</string>
    <string name="txt_commit_failed">提交失败！</string>
    <string name="register">注册</string>
    <string name="hunan_branch">沈阳南湖支行</string>
    <string name="secury_index">安全指数</string>
    <!--InspPointRegFragment-->
    <string name="hint_insp_point_name">请输入采集点名称</string>
    <string name="title_insp_point_reg">采集点注册</string>
    <string name="title_insp_point_reg_admin">采集点注册(管理员)</string>
    <string name="txt_nfc_tag">NFC标签</string>
    <string name="txt_org_tree">组织机构</string>
    <string name="txt_insp_area">巡检区域</string>
    <string name="txt_selec_field">选择区域</string>
    <string name="toast_nfc_is_null">NFC标签不能为空</string>
    <string name="toast_org_is_null">请选择组织机构</string>
    <string name="toast_insparea_is_null">请选择巡检区域</string>
    <string name="toast_insp_point_reg_fail">采集点注册失败</string>
    <string name="toast_insp_point_reg_success">采集点注册成功</string>
    <string name="progress_reg_insppoint_ing">正在注册采集点&#8230;</string>
    <string name="progress_get_insparea_ing">正在获取采集点区域&#8230;</string>
    <string name="toast_get_insparea_fail">获取巡检区域失败</string>
    <string name="dialog_select_title">选择巡检区域</string>
    <string name="toast_not_check_insparea">你还没选择区域</string>
    <string name="txt_standrad_ask">标准和要求：</string>
    <string name="secury_emp">安全员</string>
    <string name="checkItem_name">检查项名称</string>
    <string name="achieve">完成</string>
    <string name="characters">文字</string>
    <string name="org_call">机构名称</string>
    <string name="check_field">采集点区域</string>
    <string name="check_name">采集点名称</string>
    <string name="org_type">组织类型</string>
    <string name="ask_in_book">明文规定各当事方的消防安全责</string>
    <string name="define_response">1.明确责任人：</string>
    <string name="please_input_problem">问题及整改要求描述</string>
    <string name="txt_reform_hint">请输入整改结果说明</string>
    <string name="ten_hours">10小时</string>

    <!--TaskResultFragment-->
    <string name="title_check_task_result">检查结果清单</string>
    <!--CheckItemDetailFragment-->
    <string name="title_check_item">检查结果清单</string>
    <!--PhotoBrowseActivity-->
    <string name="titile_photo_browse">图片查看</string>
    <string name="btn_photo_del">删除</string>
    <string name="btn_photo_edit">编辑</string>
    <!--ProxyCameraActivityActivity-->
    <string name="prompt_not_granted_camera">应用相机权限申请失败！请手动开起应用的相机访问权限</string>
    <!--PhotoEditActivity-->
    <string name="titile_photo_edit">图片编辑</string>
    <string name="btn_save">保存</string>
    <!--指纹-->
    <string name="conn_dev_success">指纹设备初始化成功</string>
    <string name="conn_dev_fail">连接指纹设备失败</string>
    <string name="usb_perssion_deny">授权拒绝</string>
    <string name="dev_not_found">设备未发现</string>

    <string name="get_finger_img_success">获取指纹图像成功</string>
    <string name="flash_database_full">指纹库已满</string>
    <string name="enroll_success">登记指纹成功</string>
    <string name="enroll_fail">登记指纹失败</string>
    <string name="dev_error">设备异常</string>
    <string name="searching_finger">请把手持按在传感器上</string>
    <string name="get_img_error">获取图像错误</string>
    <string name="finger_is_found">手指已经找到</string>
    <string name="no_found_finger_in_flash">未发现对应指纹</string>
    <string name="enroll_progress">指纹登记中...</string>

    <!--设备-->
    <string-array name="equipment_status">
        <item>在用</item>
        <item>停用</item>
        <item>报废</item>
    </string-array>
    <string-array name="equipment_internet_status">
        <item>是</item>
        <item>否</item>
    </string-array>

    <!--评价-->
    <string-array name="maint_evalutaion">
        <item>非常满意</item>
        <item>满意</item>
        <item>一般</item>
        <item>不满意</item>
    </string-array>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="rem_pwd">记住密码</string>
    <string name="txt_forget_pwd">忘记密码？</string>
    <string name="txt_to_register">去注册></string>

    <!--个人中心-->
    <string name="txt_role">学生</string>
    <string name="txt_major">计算机科学与技术</string>
    <!--考勤提示信息-->
    <string name="reminding_normal">考勤正常，请继续加油^-^</string>
    <string name="reminding_late">闹钟，梦想，贫穷…一个都叫不醒我~zZ</string>
    <string name="reminding_earlier_leave">皇上这么早就退朝？</string>
    <string name="reminding_leaving">有特殊情况一定要及时跟老师反映哦~</string>
    <string name="reminding_absent">考勤不规范，期末两行泪。</string>
    <!--我的考勤-->
    <string name="txt_empty">好像没有更多数据了…</string>

    <!--签到-->
    <string name="txt_unsigned">签到</string>
    <string name="txt_signed">已签到</string>

    <!--注册-->
    <string name="txt_user_role">用户角色</string>
    <string name="txt_choose_role">请选择角色</string>

    <string name="txt_personinfo_instruction">请注意：黑色字体为不可更改项，如需修改，请联系管理员。</string>
    <!--请假状态-->
    <string name="txt_checking">审批中</string>
    <string name="txt_revoke">已撤销</string>
    <string name="txt_pass">已通过</string>
    <string name="txt_refuse">已拒绝</string>
</resources>
