<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/img_logo"
        android:scaleType="fitStart"/>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp" />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:background="@mipmap/icon_public_user"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/hint_user_name"
            android:textColor="@color/black"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:id="@+id/v_fill_line_user"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_user"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="#FFF2F5F4" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_fill_line_user"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_pwd"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:background="@mipmap/icon_public_password"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/et_userpwd"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColor="@color/black"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:id="@+id/v_fill_line_pwd"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_pwd"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="#FFF2F5F4" />

    <RelativeLayout
        android:id="@+id/rl_op_about_pwd"
        android:layout_below="@id/v_fill_line_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">
        <CheckBox
            android:id="@+id/remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pwd"
            android:textColor="@color/colorPrimary"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/txt_forget_pwd"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_op_about_pwd"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_login"
        android:background="@drawable/shape_click_btn"
        android:textColor="@color/cffffff" />

  <!--  <Button
        android:id="@+id/offline_login"
        android:layout_below="@+id/bt_login"
        android:text="离线登录"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/cffffff"
        android:background="@drawable/shape_offline_login_btn" />-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_alignTop="@+id/tv_to_register"-->
        <!--android:background="@color/colorPrimary"/>-->

    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/txt_to_register"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
