<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include layout="@layout/base_back_title_toolbar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="采集点名称："/>
        <EditText
            android:id="@+id/et_insp_point_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:hint="@string/hint_insp_point_name"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="#FF34413D"
            android:background="#ffffff"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:text="@string/toast_insparea_is_null"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_insp_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@drawable/shape_ctl_bg"
        android:gravity="center"
        android:text="@string/btn_confirm"
        android:textColor="@color/cffffff"
        android:textSize="15sp" />
</LinearLayout>
