<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffffff"
    android:orientation="vertical">

    <include layout="@layout/base_back_title_toolbar"/>


    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#FFF2F5F4" />-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="49dp">-->

        <!--<TextView-->
            <!--android:id="@+id/lbl_org_type"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:text="@string/lbl_org_type"-->
            <!--android:textSize="16sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_org_type"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginEnd="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_toEndOf="@+id/lbl_org_type"-->
            <!--android:layout_toRightOf="@+id/lbl_org_type"-->
            <!--android:gravity="center_vertical"-->
            <!--android:hint="@string/hint_org_type"-->
            <!--android:maxLines="1"-->
            <!--android:textColor="#FF34413D"-->
            <!--android:textSize="14sp" />-->
    <!--</RelativeLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cf2f5f4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TextView
            android:id="@+id/lbl_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/lbl_org"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_org"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/lbl_org"
            android:layout_toRightOf="@+id/lbl_org"
            android:gravity="center_vertical"
            android:hint="@string/hint_org"
            android:maxLines="1"
            android:textColor="#FF34413D"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cf2f5f4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TextView
            android:id="@+id/lbl_device_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/lbl_device_no"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_device_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/lbl_device_no"
            android:layout_toRightOf="@+id/lbl_device_no"
            android:textColor="#FF34413D"
            android:textSize="14sp"
            tools:text="8888888888" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cf2f5f4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TextView
            android:id="@+id/lbl_sim_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/lbl_sim_no"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_sim_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/lbl_sim_no"
            android:layout_toRightOf="@+id/lbl_sim_no"
            android:textColor="#FF34413D"
            android:textSize="14sp"
            tools:text="8888888888" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cf2f5f4" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:background="@drawable/shape_click_btn"
        android:text="@string/btn_register"
        android:textColor="@color/cffffffff"
        android:textSize="22sp" />
</LinearLayout>
