<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <TextView
            android:id="@+id/txt_keypoint_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap"
            tools:text="@string/define_response" />

        <CheckBox
            android:id="@+id/cbx_qual"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_open_close"
            android:button="@null" />

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/cbx_qual"
            android:layout_toStartOf="@+id/cbx_qual"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/icon_camera" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-9dp"
        android:paddingBottom="9dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/shape_task_keypoint1">

            <EditText
                android:id="@+id/txt_desc"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/please_input_problem"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/rl_img_desc"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name">

                <ImageView
                    android:id="@+id/img_desc"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:contentDescription="@string/app_name"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="#32D6AF"
                    android:textSize="14sp"
                    tools:text="1" />
            </RelativeLayout>


        </RelativeLayout>

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-9.3dp"
            android:background="@drawable/shape_task_keypoint2" />
    </FrameLayout>

    <View
        android:id="@+id/v_fill_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shape_ctl_bg_trans_20" />
</LinearLayout>